kubernetes/loki.yaml
apiVersion: v1
kind: Service
metadata:
  name: loki
  labels:
    app: loki
spec:
  selector:
    app: loki
  ports:
    - name: http
      port: 3100
      targetPort: 3100
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loki
  labels:
    app: loki
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loki
  template:
    metadata:
      labels:
        app: loki
    spec:
      containers:
        - name: loki
          image: grafana/loki:3.5.2
          args:
            - -config.file=/etc/loki/loki-config.yml
          ports:
            - containerPort: 3100
              name: http
          volumeMounts:
            - name: config
              mountPath: /etc/loki/loki-config.yml
              readOnly: true
            - name: data
              mountPath: /loki
      volumes:
        - name: config
          hostPath:
            path: /Users/taolong/Workspaces/influx_db/kubernetes/loki/loki-config.yml
            type: File
        - name: data
          hostPath:
            path: /Users/taolong/Workspaces/influx_db/kubernetes/loki/data
            type: Directory
