kubernetes/mosquitto.yaml
apiVersion: v1
kind: Service
metadata:
  name: mosquitto
  labels:
    app: mosquitto
spec:
  selector:
    app: mosquitto
  ports:
    - name: mqtt
      port: 1883
      targetPort: 1883
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: mosquitto-mqtts
  labels:
    app: mosquitto
spec:
  type: NodePort
  selector:
    app: mosquitto
  ports:
    - name: mqtts
      port: 8883
      targetPort: 8883
      protocol: TCP
      nodePort: 30883
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mosquitto
  labels:
    app: mosquitto
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mosquitto
  template:
    metadata:
      labels:
        app: mosquitto
    spec:
      containers:
        - name: mosquitto
          image: eclipse-mosquitto
          ports:
            - containerPort: 1883
              name: mqtt
            - containerPort: 8883
              name: mqtts
          volumeMounts:
            - name: config
              mountPath: /mosquitto/config
              readOnly: true
            - name: certs
              mountPath: /mosquitto/certs
              readOnly: true
            - name: data
              mountPath: /mosquitto/data
            - name: log
              mountPath: /mosquitto/log
      volumes:
        - name: config
          hostPath:
            path: /Users/taolong/Workspaces/influx_db/kubernetes/mosquitto/config
            type: Directory
        - name: certs
          hostPath:
            path: /Users/taolong/Workspaces/influx_db/kubernetes/mosquitto/certs
            type: Directory
        - name: data
          hostPath:
            path: /Users/taolong/k8s_data/mosquitto/data
            type: Directory
        - name: log
          hostPath:
            path: /Users/taolong/k8s_data/mosquitto/log
            type: Directory
