kubernetes/pushgateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: pushgateway
  labels:
    app: pushgateway
spec:
  type: NodePort
  selector:
    app: pushgateway
  ports:
    - name: http
      port: 9091
      targetPort: 9091
      protocol: TCP
      nodePort: 30901
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pushgateway
  labels:
    app: pushgateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pushgateway
  template:
    metadata:
      labels:
        app: pushgateway
    spec:
      containers:
        - name: pushgateway
          image: prom/pushgateway
          ports:
            - containerPort: 9091
              name: http
