kubernetes/vault.yaml
apiVersion: v1
kind: Service
metadata:
  name: vault
  labels:
    app: vault
spec:
  type: NodePort
  selector:
    app: vault
  ports:
    - name: https
      port: 4981
      targetPort: 4981
      protocol: TCP
      nodePort: 30881
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vault
  labels:
    app: vault
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vault
  template:
    metadata:
      labels:
        app: vault
    spec:
      containers:
        - name: vault
          image: hashicorp/vault:1.21
          args:
            - vault
            - server
            - -config=/vault/config/vault.hcl
          ports:
            - containerPort: 4981
              name: https
          volumeMounts:
            - name: config
              mountPath: /vault/config
              readOnly: true
            - name: data
              mountPath: /vault/data
      volumes:
        - name: config
          hostPath:
            path: /Users/taolong/Workspaces/influx_db/kubernetes/vault/config
            type: Directory
        - name: data
          hostPath:
            path: /Users/taolong/Workspaces/influx_db/kubernetes/vault/data
            type: Directory
