kubernetes/ingress-apps.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: consul
spec:
  ingressClassName: nginx
  rules:
    - host: consul.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: consul
                port:
                  number: 8500
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault
spec:
  ingressClassName: nginx
  rules:
    - host: vault.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vault
                port:
                  number: 4981
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
spec:
  ingressClassName: nginx
  rules:
    - host: grafana.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
